--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "webpack": "^1.13.3",
-    "babel-cli": "^6.3.17"
+    "babel-cli": "^6.3.17",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "webpack": "^1.13.3"
   },
   "dependencies": {
     "lodash": "^4.17.2"
